# BBHx

./: .gitignore  CMakeLists.txt  GPUPhenomHM.pyx  Makefile  PhenomHM.pyx  README.md  c_setup.py  c_test.py  c_wrapper.pyx  dev_snr_comp.py  dev_tdi_on_fly.py  dev_wavelet.py  full.cu  full.h  hdyn.pyx  interp_test.py  phenomhm.py  pyHdyn.py  pyproject.toml  requirements.txt  setup.py  setup_c.py  setup_cuda.py  test.py  test_phenomhm.py  wrapper.pyx
.github/workflows/: pages.yml  publish.yml  run-tests.yml
back_src/: IMRPhenomD.cu  IMRPhenomD.h  IMRPhenomD_internals.h  PhenomHM.h  createGPUHolders.cu  d_manager.cu  d_manager.hh  interpolate.cu  interpolate.hh  kernel_response.cu  likelihood.cu  likelihood.hh  manager.cu  manager.hh
bbhx/: likelihood.py  phenomhm.py  waveformbuild.py
bbhx/cutils/include/: Likelihood.hh  PhenomHM.hh  WaveformBuild.hh  global.h
bbhx/cutils/src/: Likelihood.cu  PhenomHM.cu  SpecialLikelihood.cu  gpuonlywaveformbuild.pyx  likelihood.pyx  phenomhm.pyx  waveformbuild.pyx
bbhx/response/: fastfdresponse.py  fastlisaresponse.py
bbhx/tests/: test_bbhx.py
bbhx/utils/: citations.py  interpolate.py  likelihood.py  transform.py  utility.py  waveformbuild.py
bbhx/waveforms/: phenomhm.py  seobnrv4phm.py
docs/doctrees/: README.doctree  bbhx_tutorial.doctree  environment.pickle  index.doctree
docs/doctrees/nbsphinx/: bbhx_tutorial.ipynb
docs/doctrees/user/: constants.doctree  constants1.doctree  constants2.doctree  like.doctree  main.doctree  response.doctree  utils.doctree  waveforms.doctree
docs/html/: .buildinfo  README.html  bbhx_tutorial.html  bbhx_tutorial.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: README.rst.txt  bbhx_tutorial.ipynb.txt  index.rst.txt
docs/html/_sources/user/: constants.rst.txt  like.rst.txt  main.rst.txt
docs/html/user/: constants.html  like.html  main.html  response.html  utils.html  waveforms.html
docs/source/: README.rst  bbhx_tutorial.ipynb  conf.py  index.rst
docs/source/user/: like.rst  response.rst  utils.rst  waveforms.rst
examples/: bbhx_tutorial.ipynb
examples/.ipynb_checkpoints/: bbhx_tutorial-checkpoint.ipynb
include/: EOB.hh  Interpolate.hh  Likelihood.hh  PhenomHM.hh  Response.hh  SpecialLikelihood.hh  WaveformBuild.hh  constants.h  full.h  global.h  tmp_adjust.hh
phenomhm/: PhenomHM.pyx  gpuPhenomD.pyx  gpuPhenomHM.pyx  phenomhm.py  wrapper.pyx
phenomhm/src/: D_manager.cu  D_manager.hh  IMRPhenomD.c  IMRPhenomD.cpp  IMRPhenomD.cu  IMRPhenomD.h  IMRPhenomD_internals.c  IMRPhenomD_internals.cpp  IMRPhenomD_internals.h  PhenomHM.c  PhenomHM.cpp  PhenomHM.h  RingdownCW.c  RingdownCW.cpp  RingdownCW.h  c_interpolate.cpp  c_interpolate.h  c_manager.cpp  c_manager.h  createGPUHolders.cu  cuda_complex.hpp  fdresponse.cpp  fdresponse.h  globalPhenomHM.cpp  globalPhenomHM.h  interpolate.cu  interpolate.hh  kernel.cu  kernel_response.cu  likelihood.cu  likelihood.hh  manager.cu  manager.hh  reduction.cu  tester.cpp  tester.hh
phenomhm/utils/: convert.py
scripts/: prebuild.py
src/: CMakeLists.txt  EOB.cu  IMRPhenomD.c  IMRPhenomD.cpp  IMRPhenomD.cu  IMRPhenomD.h  IMRPhenomD_internals.c  IMRPhenomD_internals.cpp  IMRPhenomD_internals.cu  IMRPhenomD_internals.h  Interpolate.cu  Likelihood.cu  PhenomHM.c  PhenomHM.cpp  PhenomHM.cu  PhenomHM.h  QNM_data.h  Response.cu  RingdownCW.c  RingdownCW.cpp  RingdownCW.h  SpecialLikelihood.cu  WaveformBuild.cu  c_interpolate.cpp  c_manager.cpp  c_manager.h  createGPUHolders.cu  createGPUHolders.hh  d_kernel.cu  d_kernel.hh  d_manager.cu  d_manager.hh  eob.pyx  fdresponse.cpp  fdresponse.h  globalPhenomHM.cpp  globalPhenomHM.h  gpuonlywaveformbuild.pyx  interpolate.cpp  interpolate.cu  (+18 more)
src/bbhx/: CMakeLists.txt  __init__.py  _editable.py  git_version.py.in  likelihood.py  waveformbuild.py
src/bbhx/cutils/: CMakeLists.txt  Likelihood.cu  PhenomHMWaveform.cu  PhenomHMWaveform.hh  Response.cu  Response.hh  SpecialLikelihood.cu  WaveformBuild.cu  __init__.py  bbhlikelihood.pyx  bbhwaveformbuild.pyx  eob.pyx  gpu_likelihood.pyx  interp.pyx  lisaresponse.pyx  newhdynlike.pyx  phenomhm.pyx
src/bbhx/response/: fastfdresponse.py  tdionfly.py
src/bbhx/utils/: constants.py  exceptions.py  interpolate.py  parallelbase.py  transform.py  utility.py
src/bbhx/waveforms/: phenomhm.py  ringdownphenomd.py
src2/: full.cu  hdyn.pyx
tests/: test_bbhx.py
